--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@mantine/core": "^7.6.1",
+    "@mantine/dates": "^7.6.1",
     "@mantine/hooks": "^7.6.1",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1"
